--- a/PicBedApi/templates/config.json
+++ b/PicBedApi/templates/config.json
@@ -1,6 +1,6 @@
 {
-    "url" : "http://beiklive.top:8830",
-    "title" : "beik图床",
-    "port": 8830,
-    "passwd" : "dj123"
+    "url" : "http://example.com:8080",
+    "title" : "图床",
+    "port": 8080,
+    "passwd" : "12345678"
 }
