yml添加密钥设置
Signed-off-by: beiklive <1376896787@qq.com>

--- a/config.yml
+++ b/config.yml
@@ -11,3 +11,5 @@ TXCos:
   - Active: "true"  # true | auto | false
   - Bucket: "beiklive-picbed-1-1306865739"
   - region: "ap-nanjing"
+  - secret_id: "xxxx"
+  - secret_key: 'xxxx'
