--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,2 @@
-/PicBedApi/__pycache__
-/PicBedApi/thumbnail
-/PicBedApi/imgSource
-/PicBedApi/PicBedApp.log
-/PicBedApi/ImgData.json
+old_file/
+web/node_modules/
